// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VirtualizedMessageComponents > EmptyPlaceholder > should render custom EmptyStateIndicator for main message list 1`] = `
<div>
  <div
    data-listtype="message"
  >
    Custom EmptyStateIndicator
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > EmptyPlaceholder > should render custom EmptyStateIndicator for thread 1`] = `
<div>
  <div
    data-listtype="thread"
  >
    Custom EmptyStateIndicator
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > EmptyPlaceholder > should render for main message list by default 1`] = `
<div>
  <div
    class="str-chat__empty-channel"
  >
    <svg
      class="str-chat__icon str-chat__icon--message-bubble"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.24431 16.4932C7.81972 17.405 9.67297 17.7127 11.4585 17.359C13.2441 17.0053 14.84 16.0143 15.9489 14.5708C17.0578 13.1273 17.6038 11.3298 17.4852 9.51341C17.3667 7.69704 16.5916 5.98577 15.3045 4.69866C14.0174 3.41156 12.3061 2.63646 10.4897 2.51789C8.67333 2.39932 6.87582 2.94537 5.43231 4.05422C3.9888 5.16308 2.99781 6.75906 2.64412 8.54461C2.29042 10.3302 2.59815 12.1834 3.50993 13.7588L2.53259 16.6768C2.49586 16.7869 2.49053 16.9051 2.5172 17.0181C2.54386 17.131 2.60146 17.2344 2.68355 17.3165C2.76563 17.3985 2.86895 17.4561 2.98194 17.4828C3.09492 17.5095 3.21309 17.5041 3.32321 17.4674L6.24431 16.4932Z"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
    <p
      class="str-chat__empty-channel-text"
      role="listitem"
    >
      Send a message to start the conversation
    </p>
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > Header > should not render custom head in Header when loading more messages, but the LoadingIndicator 1`] = `
<div>
  <div>
    Custom head
  </div>
  <div
    class="str-chat__virtual-list__loading"
  >
    <svg
      class="str-chat__icon str-chat__icon--loading str-chat__loading-indicator"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.5 10C17.5 14.1422 14.1422 17.5 10 17.5C5.85787 17.5 2.5 14.1422 2.5 10C2.5 5.85787 5.85787 2.5 10 2.5C14.1422 2.5 17.5 5.85787 17.5 10Z"
        fill="none"
        stroke="currentColor"
        stroke-opacity="0.3"
        stroke-width="2"
      />
      <path
        d="M17.4544 10.8334C17.0701 14.3097 14.3098 17.07 10.8335 17.4543"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > Header > should render LoadingIndicator in Header when loading more messages 1`] = `
<div>
  <div
    class="str-chat__virtual-list__loading"
  >
    <svg
      class="str-chat__icon str-chat__icon--loading str-chat__loading-indicator"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.5 10C17.5 14.1422 14.1422 17.5 10 17.5C5.85787 17.5 2.5 14.1422 2.5 10C2.5 5.85787 5.85787 2.5 10 2.5C14.1422 2.5 17.5 5.85787 17.5 10Z"
        fill="none"
        stroke="currentColor"
        stroke-opacity="0.3"
        stroke-width="2"
      />
      <path
        d="M17.4544 10.8334C17.0701 14.3097 14.3098 17.07 10.8335 17.4543"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper with custom classes with group styles 1`] = `
<div>
  <div
    class="XXX"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper with custom classes without group styles 1`] = `
<div>
  <div
    class="XXX"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper without custom classes with group styles 1`] = `
<div>
  <div
    class="str-chat__virtual-list-message-wrapper str-chat__li str-chat__li--single"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper without custom classes without group styles 1`] = `
<div>
  <div
    class="str-chat__virtual-list-message-wrapper str-chat__li"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;
